overflow:hidden don't work on mobile devices, I will try here to solve this by adding a relative positioning to body tag

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
 	margin: 0;
 	font-family: poppins;
 	overflow: hidden;
+        position: relative;
 }
 
 header {
